# Amo

./: Cargo.toml  README.md  build.rs  uniffi-bindgen.rs
bindings/kotlin/uniffi/amo/: amo.kt
bindings/swift/: amo.swift  amoFFI.h  amoFFI.modulemap
src/: amo.udl  lib.rs
