[package]
name = "amo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.28", features = ["build" , "cli" ] }
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = {version ="1", features = ["v4"]}
native-tls = "0.2"
scylla = "0.15"


[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"